--- a/src/components/_modals.scss
+++ b/src/components/_modals.scss
@@ -1,56 +1,56 @@
 .modal {
-  opacity: 0;
-  visibility: hidden;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  text-align: left;
-  background: rgba(black, 0.6);
-  z-index: 12;
-  flex: 1 1 auto;
-  word-wrap: break-word;
   @include transition(opacity);
+  background: rgba(#000, 0.6);
+  bottom: 0;
+  flex: 1 1 auto;
+  left: 0;
+  opacity: 0;
+  position: fixed;
+  right: 0;
+  text-align: left;
+  top: 0;
+  visibility: hidden;
+  word-wrap: break-word;
+  z-index: 12;
 
   // modal background
   &-bg {
-    position: absolute;
-    top: 0;
-    right: 0;
     bottom: 0;
-    left: 0;
     cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
   }
 
   .modal-body {
-    position: absolute;
-    top: 0;
-    left: 50%;
+    @include transition;
+    @include translate(-50%, -50%);
+    backface-visibility: hidden;
     background: $white;
     border: 2px solid $muted-light;
+    left: 50%;
     padding: 1.25rem;
-    backface-visibility: hidden;
-    @include translate(-50%, -50%);
-    @include transition;
+    position: absolute;
+    top: 0;
 
     @include resp(sm) {
-      width: 90%;
       box-sizing: border-box;
+      width: 90%;
     }
   }
 
   .btn-close {
-    width: 1.1rem;
-    height: 1.1rem;
-    cursor: pointer;
+    @include transition;
     color: $primary-light;
+    cursor: pointer;
     font-size: 30px;
-    text-decoration: none;
+    height: 1.1rem;
     position: absolute;
     right: 1rem;
+    text-decoration: none;
     top: 1rem;
-    @include transition;
+    width: 1.1rem;
 
     &:hover,
     &:active,
@@ -61,21 +61,21 @@
 
   h4,
   .modal-title {
-    margin-top: 0;
     margin-bottom: 0.5rem;
+    margin-top: 0;
   }
 
   h5,
   .modal-subtitle {
-    @extend .text-secondary;
-    margin-top: 0;
+    color: $secondary;
     margin-bottom: 0.5rem;
+    margin-top: 0;
   }
 
   p,
   .modal-text {
-    margin-top: 0;
     margin-bottom: 1rem;
+    margin-top: 0;
   }
 
   .modal-link+.modal-link,
@@ -84,24 +84,25 @@
   }
 
   .paper-btn {
-    text-decoration: none;
     background: $white;
     display: inline-block;
+    text-decoration: none;
   }
 
-  .modal-link, a {
-    text-decoration: none;
+  .modal-link,
+  a {
     background-image: linear-gradient(5deg, transparent 65%, $secondary 80%, transparent 90%), linear-gradient(165deg, transparent 5%, $secondary 15%, transparent 25%), linear-gradient(165deg, transparent 45%, $secondary 55%, transparent 65%), linear-gradient(15deg, transparent 25%, $secondary 35%, transparent 50%);
+    background-position: 0 90%;
     background-repeat: repeat-x;
     background-size: 4px 3px;
-    background-position: 0 90%;
     cursor: pointer;
+    text-decoration: none;
 
     &:hover,
     &:focus,
     &:visited {
-      text-decoration: none;
       color: $primary;
+      text-decoration: none;
     }
   }
 }
