--- a/src/components/_article.scss
+++ b/src/components/_article.scss
@@ -1,32 +1,31 @@
 article {
-	.article-title {
-		font-size: 3rem;
-	}
+  .article-title {
+    font-size: 3rem;
+  }
 
-	.article-meta {
-		font-size: 15px;
-		color: $muted;
+  .article-meta {
+    color: $muted;
+    font-size: 15px;
 
-		a {
-			color: $muted-text;
-			background-image: none;
+    a {
+      background-image: none;
+      color: $muted-text;
 
-			&:hover {
-				color: $light-dark;
-			}
-		}
-	}
+      &:hover {
+        color: $light-dark;
+      }
+    }
+  }
 
-	.text-lead {
-		font-size: 30px;
-		line-height: 1.3;
-		margin: 35px 0px;
+  .text-lead {
+    font-size: 30px;
+    line-height: 1.3;
+    margin: 35px;
   }
 
   button {
     &:not(:first-of-type) {
       margin-left: 2rem;
-
       @include resp(xs) {
         margin-left: 0;
       }
