--- a/src/components/_popovers.scss
+++ b/src/components/_popovers.scss
@@ -2,94 +2,94 @@
 [popover-top],
 [popover-right],
 [popover-bottom],
-[popover-left]{
-  position: relative;
+[popover-left] {
   margin: 24px;
+  position: relative;
 
   // Popover hover trigger
   &:hover {
-    &:after {
-      transition: opacity .2s ease-out;
+    &::after {
       opacity: 1;
+      transition: opacity 0.2s ease-out;
     }
   }
 
   // Creating popover::after element
-  &:after {
-    position: absolute;
-    top: -6px;
+  &::after {
+    @include border-style();
+    @include transition(opacity);
+    background: $light-dark;
+    border: 2px solid $primary;
+    color: $white;
+    font-size: 0.7em;
     left: 50%;
+    min-width: 80px;
     opacity: 0;
     padding: 4px 2px;
-    min-width: 80px;
-    font-size: 0.7em;
+    position: absolute;
     text-align: center;
-    color: $white;
-    background: $light-dark;
-    @include transition(opacity);
+    top: -6px;
     transform: translateX(-50%) translateY(-100%);
-    @include border-style();
-    border: 2px solid $primary;
   }
 }
 
 // Popover positioning: left, right, top, bottom
 [popover-left] {
-  &:before {
+  &::before {
     left: 0;
-    top: 50%;
     margin-left: -12px;
+    top: 50%;
     transform: translateY(-50%) rotate(-90deg);
   }
 
-  &:after {
+  &::after {
     content: attr(popover-left);
     left: 0;
-    top: 50%;
     margin-left: -8px;
+    top: 50%;
     transform: translateX(-100%) translateY(-50%);
   }
 }
 
 [popover-right] {
-  &:before {
+  &::before {
     left: 100%;
-    top: 50%;
     margin-left: 1px;
+    top: 50%;
     transform: translatey(-50%) rotate(90deg);
   }
 
-  &:after {
+  &::after {
     content: attr(popover-right);
     left: 100%;
-    top: 50%;
     margin-left: 8px;
+    top: 50%;
     transform: translateX(0%) translateY(-50%);
   }
 }
 
 [popover-top] {
-  &:before {
+  &::before {
     left: 50%;
   }
 
-  &:after {
+  &::after {
     content: attr(popover-top);
     left: 50%;
   }
 }
 
 [popover-bottom] {
-  &:before {
-    top:100%;
+  &::before {
     margin-top: 8px;
+    top: 100%;
     transform: translateX(-50%) translatey(-100%) rotate(-180deg);
   }
 
-  &:after {
+  &::after {
     content: attr(popover-bottom);
-    top: 100%;
     margin-top: 8px;
+    top: 100%;
     transform: translateX(-50%) translateY(0%);
   }
 }
