--- a/src/components/_tabs.scss
+++ b/src/components/_tabs.scss
@@ -8,24 +8,24 @@
     display: none;
 
     &:checked+label {
-      color: $primary;
       border-bottom: solid 3px $secondary;
+      color: $primary;
     }
 
     @for $num from 1 through 5 {
-      &[id="tab#{$num}"]:checked~div[id="content#{$num}"] {
+      &[id='tab#{$num}']:checked~div[id='content#{$num}'] {
         display: block;
       }
     }
   }
 
   label {
-    display: inline-block;
-    margin: 0 0 -1px;
-    padding: 0.75rem 0.75rem;
-    font-weight: 600;
-    text-align: center;
     color: $primary-light;
+    display: inline-block;
+    font-weight: 600;
+    margin: 0 0 -1px;
+    padding: 0.75rem;
+    text-align: center;
 
     &:hover {
       color: $muted;
