--- a/src/components/_utilities.scss
+++ b/src/components/_utilities.scss
@@ -1,18 +1,21 @@
 $base: 1rem;
 $large: 2rem;
-$small: .5rem;
+$small: 0.5rem;
 
 .margin {
   margin: $base;
 
   &-top {
     margin-top: $base;
+
     &-large {
       margin-top: $large;
     }
+
     &-small {
       margin-top: $small;
     }
+
     &-none {
       margin-top: 0;
     }
@@ -20,12 +23,15 @@ $small: .5rem;
 
   &-right {
     margin-right: $base;
+
     &-large {
       margin-right: $large;
     }
+
     &-small {
       margin-right: $small;
     }
+
     &-none {
       margin-right: 0;
     }
@@ -33,12 +39,15 @@ $small: .5rem;
 
   &-bottom {
     margin-bottom: $base;
+
     &-large {
       margin-bottom: $large;
     }
+
     &-small {
       margin-bottom: $small;
     }
+
     &-none {
       margin-bottom: 0;
     }
@@ -46,12 +55,15 @@ $small: .5rem;
 
   &-left {
     margin-left: $base;
+
     &-large {
       margin-left: $large;
     }
+
     &-small {
       margin-left: $small;
     }
+
     &-none {
       margin-left: 0;
     }
@@ -60,9 +72,11 @@ $small: .5rem;
   &-large {
     margin: $large;
   }
+
   &-small {
     margin: $small;
   }
+
   &-none {
     margin: 0;
   }
@@ -73,12 +87,15 @@ $small: .5rem;
 
   &-top {
     padding-top: $base;
+
     &-large {
       padding-top: $large;
     }
+
     &-small {
       padding-top: $small;
     }
+
     &-none {
       padding-top: 0;
     }
@@ -86,12 +103,15 @@ $small: .5rem;
 
   &-right {
     padding-right: $base;
+
     &-large {
       padding-right: $large;
     }
+
     &-small {
       padding-right: $small;
     }
+
     &-none {
       padding-right: 0;
     }
@@ -99,12 +119,15 @@ $small: .5rem;
 
   &-bottom {
     padding-bottom: $base;
+
     &-large {
       padding-bottom: $large;
     }
+
     &-small {
       padding-bottom: $small;
     }
+
     &-none {
       padding-bottom: 0;
     }
@@ -112,12 +135,15 @@ $small: .5rem;
 
   &-left {
     padding-left: $base;
+
     &-large {
       padding-left: $large;
     }
+
     &-small {
       padding-left: $small;
     }
+
     &-none {
       padding-left: 0;
     }
