--- a/src/content/_lists.scss
+++ b/src/content/_lists.scss
@@ -1,11 +1,15 @@
 ol {
   list-style-type: decimal;
+
   ol {
     list-style-type: upper-alpha;
+
     ol {
       list-style-type: upper-roman;
+
       ol {
         list-style-type: lower-alpha;
+
         ol {
           list-style-type: lower-roman;
         }
@@ -15,28 +19,35 @@ ol {
 }
 
 ul {
+  @include li-bullet('-');
   list-style: none;
   margin-left: 0;
+
   li {
     text-indent: -7px;
-    &:before {
-      position: relative;
+
+    &::before {
       left: -7px;
+      position: relative;
     }
   }
-  @include li-bullet("-");
+
   ul {
-    @include li-bullet("+");
+    @include li-bullet('+');
+
     ul {
-      @include li-bullet("~");
+      @include li-bullet('~');
+
       ul {
-        @include li-bullet("⤍");
+        @include li-bullet('⤍');
+
         ul {
-          @include li-bullet("⁎");
+          @include li-bullet('⁎');
         }
       }
     }
   }
+
   &.inline li {
     display: inline;
     margin-left: 5px;
