--- a/src/layout/_container.scss
+++ b/src/layout/_container.scss
@@ -1,21 +1,22 @@
 .container {
-  width: 100%;
+  margin: 0 auto;
   max-width: 960px;
   position: relative;
-  margin: 0 auto;
+  width: 100%;
   @include resp(medium) {
-      width: 85%;
+    width: 85%;
   }
   @include resp(xsmall) {
-      width: 90%;
+    width: 90%;
   }
 }
+
 .section {
-  margin-top: 1rem;
   margin-bottom: 2rem;
+  margin-top: 1rem;
   word-wrap: break-word;
 
-  &:after {
+  &::after {
     @include hr-after;
   }
 }
@@ -23,25 +24,25 @@
 hr {
   border: 0;
 
-  &:after {
+  &::after {
     @include hr-after;
-    top: -.75rem;
+    top: -0.75rem;
   }
 }
 
 .paper {
-  border: 1px solid $primary-light;
   background-color: $main-background;
-  padding: 2rem;
-  margin-top: 1rem;
+  border: 1px solid $primary-light;
+  -moz-box-shadow: -1px 5px 35px -9px hsla(0, 0%, 0%, 0.2);
+  -webkit-box-shadow: -1px 5px 35px -9px hsla(0, 0%, 0%, 0.2);
+  box-shadow: -1px 5px 35px -9px hsla(0, 0%, 0%, 0.2);
   margin-bottom: 1rem;
-  -webkit-box-shadow: -1px 5px 35px -9px hsla(0,0%,0%,.2);
-  -moz-box-shadow: -1px 5px 35px -9px hsla(0,0%,0%,.2);
-  box-shadow: -1px 5px 35px -9px hsla(0,0%,0%,.2);
+  margin-top: 1rem;
+  padding: 2rem;
   @include resp(xs) {
+    margin-bottom: 0;
+    margin-top: 0;
     padding: 1rem;
     width: 100%;
-    margin-top: 0;
-    margin-bottom: 0;
   }
 }
